修改：     .idea/codeStyles/Project.xml 	修改：     Cargo.toml 	修改：     src/main.rs 	修改：     src/ptsample.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ mpi = "0.5.4"
 num-traits = ">0.2.*"
 rand = ">0.4.*"
 mpi-sys = "0.1.2"
+quickersort = ">=3.0.0"
 
 [dependencies.scorus]
 path="../scorus"
