修改：     Cargo.toml 	修改：     src/ensemble_sample.rs 	修改：     src/main.rs 	修改：     src/ptsample.rs 	updated rand from 0.4 to 0.5

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Gu Junhua <jhgu@nao.cas.cn>"]
 [dependencies]
 mpi = "0.5.4"
 num-traits = ">0.2.*"
-rand = ">0.4.*"
+rand = ">=0.5.*"
 mpi-sys = "0.1.2"
 quickersort = ">=3.0.0"
 
