modified:   Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [dependencies]
-mpi = {git='https://github.com/bsteinb/rsmpi.git'}
 num-traits = '0.2.6'
 quickersort = '3.0.1'
 rand = '0.6.5'
+
+[dependencies.mpi]
+git = 'https://github.com/bsteinb/rsmpi.git'
+default-features = false
+features = []
 
 [dependencies.scorus]
 path = '../scorus'
