--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [dependencies]
-num-traits = '0.2.6'
+num-traits = '0.2.8'
 quickersort = '3.0.1'
-rand = '0.6.5'
+rand = '0.7.0-pre.1'
 
 [dependencies.mpi]
-git = 'https://github.com/bsteinb/rsmpi.git'
 default-features = false
 features = []
+git = 'https://github.com/bsteinb/rsmpi.git'
 
 [dependencies.scorus]
 path = '../scorus'
