--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [dependencies]
 num-traits = '0.2.8'
 quickersort = '3.0.1'
-rand = '0.7.0-pre.1'
+rand = '0.7.0'
 
 [dependencies.mpi]
 default-features = false
